sample test with cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,9 @@ enable_language (Fortran)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 add_library(sft SHARED src/assert.f95 src/suit.f95 src/utils.f95)
+
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/examples)
+
 add_custom_command(
     TARGET sft POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy
@@ -18,3 +21,4 @@ add_custom_command(
     ${CMAKE_SOURCE_DIR}/release/*.so
     ${CMAKE_CURRENT_SOURCE_DIR}/lib
 )
+
