--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,10 +3,9 @@ cmake_minimum_required(VERSION 2.8)
 project (examples)
 set(CMAKE_BUILD_TYPE Release)
 enable_language (Fortran)
-enable_testing()
 
-LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lib)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/lib/include)      
+LINK_DIRECTORIES(${PRERELEASE}/lib)
+include_directories(${PRERELEASE}/include)      
 
 add_executable(assert.example assert.f95)
 target_link_libraries(assert.example sft)
